# cmake-live

./: .gitignore  README.md
experimental/dllexport-import-demo/mod3/: CMakeLists.txt
experimental/dllexport-import-demo/mod3/include/: mod3.h
experimental/dllexport-import-demo/mod3/src/: mod3.cpp
experimental/dllexport-import-demo/mod3/test/: testMod3.cpp
experimental/scopeDemo/: CMakeLists.txt
experimental/scopeDemo/libA/: CMakeLists.txt  libA.cpp  libA.h
experimental/scopeDemo/libB/: CMakeLists.txt  libB.cpp  libB.h
experimental/scopeDemo/libC/: CMakeLists.txt
experimental/scopeDemo/main/: CMakeLists.txt  main.cpp
sources/: CMakeLists.txt
sources/Day-1/FirstCMake/: CMakeLists.txt
sources/mod1/: CMakeLists.txt
sources/mod1/src/: mod1.cpp
sources/mod2/: CMakeLists.txt
sources/mod2/src/: mod2.cpp
sources/mod2/test/: testMod2.cpp
sources/mod3/: CMakeLists.txt
sources/mod3/include/: mod3.h
sources/mod3/src/: mod3.cpp
sources/mod3/test/: testMod3.cpp
sources/mod4/: CMakeLists.txt  README.md
sources/mod4/headerOnlyLib/: CMakeLists.txt
sources/mod4/headerOnlyLib/include/: headerOnlyLib.h
sources/mod4/test/: CMakeLists.txt  main.cpp
sources/mod5/: CMakeLists.txt
sources/mod5/include/: code1.h  code2.h
sources/mod5/src/: code1.cpp  code2.cpp
sources/mod5/test/: main.cpp
